@startuml

title __MANAGER's Class Diagram__\n

  namespace  {
    namespace anager {
      class manager.Commande {
          - idNavire : int
          + Commande()
          + Commande()
          + getActionChoisie()
          + getDirectionChoisie()
          + getEquipe()
          + getIdNavire()
          + setActionChoisie()
          + setDirectionChoisie()
          + setIdNavire()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace anager {
      class manager.Jeu {
          # joueurs : ArrayList<Joueur>
          # taille : int
          - MAX_NBR_BATEAU : int
          - fini : boolean
          - random : Random
          - scanner : Scanner
          + Jeu()
          + affichageJoueurs()
          + attributionNavire()
          + choixJoueurs()
          + creationJoueur()
          + finDePartie()
          + jouer()
          + majJeuAvCommande()
          + majJeuCasDeplacement()
          + majJeuCasPeche()
          + majJeuCasTir()
          + majListeNavire()
          + positionnementNavire()
      }
    }
  }
  

  manager.Commande o-- tools.Action : actionChoisie
  manager.Commande o-- tools.Direction : directionChoisie
  manager.Commande o-- equipe.Equipe : equipe
  manager.Jeu o-- plateau.Plateau : plateau


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
